fix scrollbar issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,6 +7,26 @@
   display: flex;
   flex-direction: column;
   height: max-content;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   max-height: 100vh;
+}
+/* Style the scrollbar track */
+::-webkit-scrollbar {
+  width: clamp(2px, 1.5vw, 5px);
+  height: 16px;
+}
+
+/* Style the track (background of the scrollbar) */
+::-webkit-scrollbar-track {
+}
+
+/* Style the draggable "thumb" part of the scrollbar */
+::-webkit-scrollbar-thumb {
+  background: black;
+}
+
+/* Hover effect */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
